--- a/registerlogin.html
+++ b/registerlogin.html
@@ -7,7 +7,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    <title> Login/register: Health and fitness</title>
+    <title> Login/register: Rides</title>
      <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     
@@ -17,15 +17,14 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script src="JS/faq.js"></script>
+ 
 </head>
     
     <body>
         <header>
       <div class="container">
         <a class="logo" href="index.html"><img src="images/icon.png" alt="World's Rugby"></a>
-        <h1 class="font-model">Health &<br> 
-         <span>Fitness</span></h1>
+        <h1 class="font-model">Rides<br></h1>
         <div class="clear"></div>
       </div>
 </header>
